--- a/cart.html
+++ b/cart.html
@@ -202,6 +202,24 @@
 </div>
 </div>
 
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-fullscreen">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalToggleLabel">Modal 1</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+    <p>Compra finalizada con éxito!</p>
+</div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" id="btnmodal" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
   </main>
   <footer class="text-muted">
     <div class="container">
