--- a/product-info.html
+++ b/product-info.html
@@ -115,7 +115,7 @@
       <div class="row g-4 align-items-center card-custom ">
 
         <div class="col-md-2 text-center mb-4 border-end">
-          <img src="img/img_perfil.png" class="img-fluid rounded-circle profileImg mx-auto" alt="comentarios" style="max-width: 35rem; max-height: 35rem;" >
+          <img src="img/img_perfil.png" class="rounded-circle profileImg" alt="comentarios" width="120" height="120" >
         </div>
 
         <div class="col-md-10">
