el verdadero último update (espero)

--- a/cart.html
+++ b/cart.html
@@ -68,6 +68,7 @@
     <div class="row ">
     <div class="col-lg-8 col-sm-12" id="container-carrito">
         </div>
+      
       <div class="col-lg-4 col-sm-12">
     <div class="card p-3 rounded-3 shadow-sm">
       <div class="accordion mt-3" id="accordionExample">
@@ -196,6 +197,13 @@
      </div>
      <div>
         <button id="buyBtn" class="btn w-100" type="submit">Comprar</button>
+    </div>
+      <div id="spinner-wrapper">
+    <div class="lds-ring">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
     </div>
   </form>
   </div>
