--- a/product-info.html
+++ b/product-info.html
@@ -93,6 +93,13 @@
             <button id="addcart" class="inset-shadow btn btn-primary btn-lg "><i class="bi bi-bag-plus-fill"></i></button>
             <input type="number" class="form-control" value="1" id="amountInput" min="1" step="1" max="69">
           </div>
+           <div id="spinner-wrapper">
+    <div class="lds-ring">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
         </div>
 
       </div>
@@ -115,7 +122,7 @@
       <div class="row g-4 align-items-center card-custom ">
 
         <div class="col-md-2 text-center mb-4 border-end">
-          <img src="img/img_perfil.png" class="rounded-circle profileImg" alt="comentarios" width="120" height="120" >
+          <img src="img/img_perfil.png" class="rounded-circle profileImg" alt="error" width="120" height="120" >
         </div>
 
         <div class="col-md-10">
